--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.wso2.choreo</groupId>
 	<artifactId>customer-api</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>Choreo SpringBoot sample</name>
 	<description>Choreo SpringBoot sample</description>
 	<properties>
